# bluetooth-serial-port

./: .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
examples/: example.rs
src/: bluetooth.rs  ffi.rs  lib.rs
src/linux/: ffi.rs  hci.rs  mod.rs  sdp.rs  socket.rs
src/windows/: mod.rs
