[package]
name = "bluetooth-serial-port"
version = "0.2.0"
authors = ["Christopher James Halse Rogers <raof@ubuntu.com>", "Chang Spivey <chang.spivey@gmail.com>"]
description = "Interact with Bluetooth devices via RFCOMM channels"
repository = "https://github.com/ChangSpivey/bluetooth-rs"
readme = "README.md"
keywords = ["bluetooth", "RFCOMM", "SDP"]
license = "GPL-3.0"

[dependencies]
mio = "^0.5.1"
nix = "^0.4.1"
libc = "^0.2.12"
enum_primitive = "0.1"

[features]
# Feature to disable any tests which rely on hardware availability
# eg: tests which attempt to create a BtSocket.
test_without_hardware = []
