[package]
name = "bluetooth-serial-port"
version = "0.2.1"
authors = ["Christopher James Halse Rogers <raof@ubuntu.com>", "Chang Spivey <chang.spivey@gmail.com>"]
description = "Interact with Bluetooth devices via RFCOMM channels"
repository = "https://github.com/ChangSpivey/bluetooth-serial-port"
readme = "README.md"
keywords = ["bluetooth", "RFCOMM", "SDP", "SPP"]
license = "GPL-3.0"

[dependencies]
mio = "0.5"
nix = "0.6.0"
libc = "0.2"
enum_primitive = "0.1"

[features]
# Feature to disable any tests which rely on hardware availability
# eg: tests which attempt to create a BtSocket.
test_without_hardware = []
