[package]
name = "bluetooth-serial-port"
version = "0.5.1"
authors = ["Christopher James Halse Rogers <raof@ubuntu.com>", "kaegi <kaegi.dev@gmail.com>"]
description = "Interact with Bluetooth devices via RFCOMM channels"
repository = "https://github.com/kaegi/bluetooth-serial-port"
readme = "README.md"
keywords = ["bluetooth", "RFCOMM", "SDP", "SPP"]
license = "MIT"

[dependencies]
mio = "0.6"
nix = "0.7.0"
libc = "0.2"
enum_primitive = "0.1"

[features]
# Feature to disable any tests which rely on hardware availability
# eg: tests which attempt to create a BtSocket.
test_without_hardware = []
